<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jboss.tools</groupId>
	<artifactId>org.jboss.tools.parent.pom</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<name>JBoss Tools Parent</name>
	<packaging>pom</packaging>

	<properties>
		<!--tychoVersion>0.10.0-SNAPSHOT</tychoVersion -->
		<tychoVersion>0.17.0</tychoVersion>
		<scmBranch>branches/3.3.indigo</scmBranch>
		<BUILD_ALIAS>M1</BUILD_ALIAS>
		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
		<memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
		<systemProperties></systemProperties>
		<maven.antrun.plugin.version>1.3</maven.antrun.plugin.version>

		<!-- target files available for building: multiple sites, 1 unified site, 
			1 local mirrored site -->
		<target.platform.classifier.multiple>mutiple
		</target.platform.classifier.multiple>
		<target.platform.classifier.unified>unified
		</target.platform.classifier.unified>
		<target.platform.classifier.local>local
		</target.platform.classifier.local>

		<jbosstools-nightly>http://download.jboss.org/jbosstools/updates/nightly/3.3.indigo/</jbosstools-nightly>

		<!-- pass in your own path using -Dlocal.site=file://home/$user/trunk/build/target-platform/REPO/ -->
		<local.site>file://home/hudson/static_build_env/jbds/target-platform_3.3.indigo/e37M5-wtp33M5.target/</local.site>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${maven.antrun.plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<format>'v'yyyyMMdd-HHmm'-${BUILD_ALIAS}'</format>
					<archiveSite>true</archiveSite>
					<environments>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>carbon</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tychoVersion}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<ignoreTychoRepositories>true</ignoreTychoRepositories>
					<dependency-resolution>
						<optionalDependencies>ignore</optionalDependencies>
					</dependency-resolution>
					<environments>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>carbon</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<!-- to skip running tests (compile only) use commandline flag: -Dmaven.test.skip 
				To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail 
				at end) -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<!-- timeout in seconds -->
					<surefire.timeout>1800</surefire.timeout>
					<forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
					<useUIHarness>true</useUIHarness>
					<useUIThread>true</useUIThread>
					<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
					<argLine>${memoryOptions1} ${memoryOptions2} ${systemProperties}
						-Dusage_reporting_enabled=false</argLine>
					<!-- https://docs.sonatype.org/display/TYCHO/How+to+run+SWTBot+tests+with+Tycho -->
					<!-- set useUIThread=true for regular ui tests -->
					<!-- set useUIThread=false for swtbot tests (?) -->

					<!-- TODO: add new profile to permit running against JBDS product/application 
						for JBDS tests, against Eclipse SDK for JBT -->
					<product>org.eclipse.sdk.ide</product>
					<application>org.eclipse.ui.ide.workbench</application>
					<dependencies>
						<dependency>
							<type>p2-installable-unit</type>
							<artifactId>org.eclipse.sdk.ide</artifactId>
							<version>0.0.0</version>
						</dependency>
						<!-- http://www.jmock.org/maven.html -->
						<dependency>
							<groupId>org.jmock</groupId>
							<artifactId>jmock-legacy</artifactId>
							<version>2.5.1</version>
						</dependency>
						<dependency>
							<groupId>org.jmock</groupId>
							<artifactId>jmock-junit4</artifactId>
							<version>2.5.1</version>
						</dependency>
					</dependencies>
					<includes>
						<include>**/AllTests.class</include>
						<include>**/*AllTests*.class</include>
						<include>**/*AllBotTests*.class</include>
						<include>**/*TestSuite*.class</include>
					</includes>
					<parallel>true</parallel>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tychoVersion}</version>
				<!-- not strictly needed but this suppresses warnings when compiling 
					that the default value (1.5) is being overwritten by the value in the MANIFEST.MF. 
					You can use this in your plugins or their aggregator pom.xml files to set 
					this for your plugins -->
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<scm>
		<connection>scm:svn:http://anonsvn.jboss.org/repos/jbosstools/${scmBranch}
		</connection>
		<developerConnection>scm:svn:http://anonsvn.jboss.org/repos/jbosstools/${scmBranch}
		</developerConnection>
		<url>http://anonsvn.jboss.org/repos/jbosstools/${scmBranch}
		</url>
	</scm>

	<issueManagement>
		<system>jira</system>
		<url>https://jira.jboss.org/jira/secure/</url>
	</issueManagement>
	<profiles>

		<profile>
			<id>internet-p2-sites</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<repositories>
				<repository>
					<id>webtools</id>
					<url>http://download.eclipse.org/webtools/updates</url>
					<layout>p2</layout>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<releases>
						<enabled>true</enabled>
					</releases>
				</repository>
				<repository>
					<id>gef</id>
					<url>http://download.eclipse.org/tools/gef/updates-pre-3_8/releases/</url>
					<layout>p2</layout>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<releases>
						<enabled>true</enabled>
					</releases>
				</repository>
				<repository>
					<id>emf</id>
					<url>http://download.eclipse.org/modeling/emf/emf/updates/releases/</url>
					<layout>p2</layout>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<releases>
						<enabled>true</enabled>
					</releases>
				</repository>
				<repository>
					<id>indigo</id>
					<url>http://download.eclipse.org/releases/indigo/</url>
					<layout>p2</layout>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<releases>
						<enabled>true</enabled>
					</releases>
				</repository>
			</repositories>
		</profile>


		<!-- if you have a local repo mirror of the unified.site, you can use this 
			profile with the -Dlocal.site=file://path/to/repo to resolve dependencies 
			without needing to use a local.site file -->

		<profile>
			<id>osx</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://www.apple.com/</value>
				</property>
			</activation>
			<properties>
				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
				<systemProperties combine.children="append"> -d32
					-Dosgi.arch=x86 -XstartOnFirstThread
				</systemProperties>
			</properties>
		</profile>

		<profile>
			<id>hudson</id>
			<activation>
				<property>
					<name>BUILD_NUMBER</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-packaging-plugin</artifactId>
						<version>${tychoVersion}</version>
						<configuration>
							<format>'v'yyyyMMdd-HHmm'-H${BUILD_NUMBER}-${BUILD_ALIAS}'
							</format>
							<archiveSite>true</archiveSite>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>coverage</id>
			<activation>
				<property>
					<name>coverage</name>
				</property>
			</activation>
			<properties>
				<emma.session.out.file>${project.build.directory}/emma/coverage.es
				</emma.session.out.file>
				<emma.filter />
				<emma.instrument.bundles />
			</properties>
			<build>
				<plugins>
					<!-- plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>build-helper-maven-plugin</artifactId> 
						<executions> <execution> <id>attach-artifacts</id> <phase>package</phase> 
						<goals> <goal>attach-artifact</goal> </goals> <configuration> <artifacts> 
						<artifact> <file>${emma.session.out.file}</file> <type>es</type> </artifact> 
						</artifacts> </configuration> </execution> </executions> </plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-install-plugin</artifactId>
						<version>2.3.1</version>
						<configuration>
							<file></file>
							<groupId></groupId>
							<artifactId></artifactId>
							<version></version>
							<packaging></packaging>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-surefire-plugin</artifactId>
						<version>${tychoVersion}</version>
						<configuration>
							<systemProperties combine.children="append">
								<emma.session.out.file>${emma.session.out.file}
								</emma.session.out.file>
								<emma.filter>${emma.filter}</emma.filter>
								<eclemma.instrument.bundles>${emma.instrument.bundles}
								</eclemma.instrument.bundles>
							</systemProperties>
							<frameworkExtensions>
								<frameworkExtension>
									<groupId>org.eclemma.runtime.equinox</groupId>
									<artifactId>org.eclemma.runtime.equinox</artifactId>
									<version>1.1.0.200908261008</version>
								</frameworkExtension>
							</frameworkExtensions>
							<application>org.eclipse.ui.ide.workbench</application>
							<dependencies>
								<dependency>
									<type>p2-installable-unit</type>
									<artifactId>org.eclipse.sdk.ide</artifactId>
									<version>0.0.0</version>
								</dependency>
							</dependencies>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>${maven.antrun.plugin.version}</version>
						<dependencies>
							<dependency>
								<groupId>emma</groupId>
								<artifactId>emma_ant</artifactId>
								<version>2.0.5312</version>
							</dependency>
							<dependency>
								<groupId>emma</groupId>
								<artifactId>emma</artifactId>
								<version>2.0.5312</version>
							</dependency>
							<dependency>
								<groupId>ant-contrib</groupId>
								<artifactId>ant-contrib</artifactId>
								<version>1.0b3</version>
								<exclusions>
									<exclusion>
										<groupId>ant</groupId>
										<artifactId>ant</artifactId>
									</exclusion>
								</exclusions>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<id>emma-report</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<taskdef resource="emma_ant.properties" />
										<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
										<if>
											<available file="${project.build.directory}/emma"
												type="dir" />
											<then>
												<echo>Process emma report...</echo>
												<!-- emma enabled="true"> <instr metadatafile="${project.build.directory}/coverage.em" 
													mode="overwrite" instrpath="${project.build.directory}/../../../plugins/${emma.instrument.bundles}/target/classes" 
													/> </emma -->
												<emma enabled="true">
													<report>
														<infileset dir="${project.build.directory}/emma"
															includes="*.es,*.em" />
														<txt outfile="${project.build.directory}/emma/coverage.txt" />
														<xml outfile="${project.build.directory}/emma/coverage.xml" />
														<html outfile="${project.build.directory}/emma/coverage.html" />
													</report>
												</emma>
												<loadfile property="emma.txt"
													srcFile="${project.build.directory}/emma/coverage.txt"
													failonerror="false" />
												<echo>${emma.txt}</echo>
											</then>
										</if>
									</tasks>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>requirements</id>
			<activation>
				<file>
					<exists>${basedir}/requirements.properties</exists>
				</file>
			</activation>
			<properties>
				<requirements.root>${basedir}/../../../requirements</requirements.root>
				<requirement.build.root>${requirements.root}/target</requirement.build.root>
			</properties>
			<build>
				<plugins>
					<plugin>
						<dependencies>
							<dependency>
								<groupId>ant-contrib</groupId>
								<artifactId>ant-contrib</artifactId>
								<version>1.0b3</version>
								<exclusions>
									<exclusion>
										<groupId>ant</groupId>
										<artifactId>ant</artifactId>
									</exclusion>
								</exclusions>
							</dependency>
						</dependencies>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>${maven.antrun.plugin.version}</version>
						<executions>
							<execution>
								<id>download-plugin-requirements</id>
								<phase>generate-test-resources</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
										<if>
											<available file="${requirements.root}" type="dir" />
											<then>
												<property file="requirements.properties" />
												<echo>Requirements build</echo>
												<ant dir="${requirements.root}" inheritAll="true">
													<property name="requirements" value="${requirements}" />
													<property name="settings.offline" value="${settings.offline}" />
													<property name="skipDownload" value="${skipDownload}" />
												</ant>
											</then>
										</if>
									</tasks>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<!-- this plugin is available from https://github.com/nickboldt/maven-plugins/tree/master/unique-GAV-plugin/ -->
			<id>GAV</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jboss.maven.plugin</groupId>
						<artifactId>unique-GAV-plugin</artifactId>
						<version>0.0.1-SNAPSHOT</version>
						<executions>
							<execution>
								<phase>validate</phase>
								<goals>
									<goal>run</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<verbose>true</verbose>
							<doInfo>true</doInfo>
							<doWarn>true</doWarn>
							<doError>true</doError>
							<sourceDirectory>.</sourceDirectory>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<repositories>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>jboss-releases-repository</id>
			<name>JBoss Releases Repository</name>
			<url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
		</repository>
		<snapshotRepository>
			<id>jboss-snapshots-repository</id>
			<name>JBoss Snapshots Repository</name>
			<url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
		<!-- <repository> <id>jboss-releases-repository</id> <name>JBoss Releases 
			Repository</name> <uniqueVersion>false</uniqueVersion> <url>https://repository.jboss.org/nexus/content/repositories/releases/</url> 
			<layout>default</layout> </repository> <snapshotRepository> <id>jboss-snapshots-repository</id> 
			<name>JBoss Snapshot Repository</name> <uniqueVersion>false</uniqueVersion> 
			<url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url> 
			<layout>default</layout> </snapshotRepository> -->
	</distributionManagement>
</project>
